added title content for timeline

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="homeDisplay">
         <div class="homeText">HOME</div>
       </div>
-      <div class="location">Miami,FL</div>
+      <div class="location">Miramar,FL</div>
     </div>
     <div class="resumePostcard"></div>
     <div class="projectPostcard"></div>
@@ -36,7 +36,7 @@
   <div class="aboutMeContainer">
     <div class="textContainer">
       <div class="introText">
-        Hi, I'm <u class="Eric">Eric</u> from Miami!
+        Hi, I'm <u class="Eric">Eric</u> from Florida!
       </div>
       <div class="aboutMeText">
         I am an explorer and life-long learner at heart. I am pursuing a
