--- a/projectScreen.html
+++ b/projectScreen.html
@@ -27,6 +27,102 @@
       <div class="location">Ithaca, NY</div>
     </div>
   </div>
+  <div class="timeline">
+    <div class="leftContainer">
+      <div class="amazon1">
+        <div class="amazon1Name">Amazon Future Engineer/Software Development Engineer Intern @ Amazon</div>
+        <div class="amazon1LocDate">Seattle, WA (May 2022-Aug. 2022)</div>
+        <div class="amazon1pic">pic</div>
+      </div>
+      <div class="amazon1Back">
+        <div class="amazon1pic2">pic</div>
+        <div class="amazon1desc">lorem</div>
+      </div>
+      <div class="LJL">
+        <div class="LJLName">Natural Language Processing Developer @ Linguistics Justice League</div>
+        <div class="LJLLocDate">Remote, May (2022-Aug. 2022)</div>
+        <div class="LJLpic">pic</div>
+      </div>
+      <div class="LJLBack">
+        <div class="LJLpic2">pic</div>
+        <div class="LJLdesc">lorem</div>
+      </div>
+      <div class="edgi">
+        <div class="edgiName">Software Development Engineer @ Environmental Data and Governance Initiative</div>
+        <div class="edgiDate">Ithaca, NY (Jan. 2023-Dec. 2023)</div>
+        <div class="edgipic">pic</div>
+      </div>
+      <div class="edgiBack">
+        <div class="edgipic2">pic</div>
+        <div class="edgidesc">lorem</div>
+      </div>
+      <div class="embody">
+        <div class="embodyName">Full-Stack Engineer @ Cornell College of Human Ecology</div>
+        <div class="embodyLocDate">Ithaca, NY (Aug. 2023-Present)</div>
+        <div class="embodypic">pic</div>
+      </div>
+      <div class="embodyBack">
+        <div class="embodypic2">pic</div>
+        <div class="embodydesc">lorem</div>
+      </div>
+      <div class="bus">
+        <div class="busName">Campus Outreach Lead @ Cornell Hack4Impact</div>
+        <div class="busLocDate">Ithaca, NY (Jan. 2024-Present)</div>
+        <div class="buspic">pic</div>
+      </div>
+      <div class="busBack">
+        <div class="buspic2">pic</div>
+        <div class="busdesc">lorem</div>
+      </div>
+    </div>
+    <div class="rightContainer">
+      <div class="wharton">
+        <div class="whartonName">Machine Learning Engineer @ Penn Computational Social Science Lab</div>
+        <div class="whartonDate">Remote (May 2022-Jan. 2023)</div>
+        <div class="whartonpic">pic</div>
+      </div>
+      <div class="whartonBack">
+        <div class="whartonpic2">pic</div>
+        <div class="whartondesc">lorem</div>
+      </div>
+      <div class="XMP">
+        <div class="XMPName">Machine Learning Engineer @ Xenophobia Meter Project</div>
+        <div class="XMPDate">Ithaca, NY (Aug. 2022-Jan. 2023)</div>
+        <div class="xmppic">pic</div>
+      </div>
+      <div class="XMPback">
+        <div class="XMPpic2">pic</div>
+        <div class="XMPdesc">lorem</div>
+      </div>
+      <div class="amazon2">
+        <div class="amazon2Name">Deep Learning Software Development Engineer @ Amazon</div>
+        <div class="amazon2Date">Seattle, WA (May 2022-Aug. 2022)</div>
+        <div class="amazon2pic">pic</div>
+      </div>
+      <div class="amazon2Back">
+        <div class="amazon2pic2">pic</div>
+        <div class="amazon2desc">lorem</div>
+      </div>
+      <div class="pain">
+        <div class="painName">Product Manager/Technical Lead @ Cornell Affect and Cognition Lab</div>
+        <div class="painLocDate">Ithaca, NY (May 2024-Present)</div>
+        <div class="painpic">pic</div>
+      </div>
+      <div class="painBack">
+        <div class="painpic2">pic</div>
+        <div class="paindesc">lorem</div>
+      </div>
+      <div class="amazon3">
+        <div class="amazon3Name">Deep Learning Software Development Engineer @ Amazon</div>
+        <div class="amazon3LocDate">Seattle, WA (May. 2024-Present)</div>
+        <div class="amazon3pic">pic</div>
+      </div>
+      <div class="amazon3Back">
+        <div class="amazon3pic2">pic</div>
+        <div class="amazon3desc">lorem</div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
