--- a/resumeScreen.html
+++ b/resumeScreen.html
@@ -29,6 +29,10 @@
       <div class="location">Seattle, WA</div>
     </div>
   </div>
+  <div class="resumeContainer"><iframe
+      src="https://docs.google.com/document/d/1bHN_ZiwfO9rWqsF7RvYrM-xnleCPB0Dfs7BcJU8ehTM/edit?usp=sharing"
+      class="resume"></iframe>
+  </div>
 </body>
 
 </html>
