added all functionality for projects except descriptions

--- a/projectScreen.html
+++ b/projectScreen.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eric Zhong's Resume</title>
+  <title>Eric Zhong's Projects</title>
   <link rel="stylesheet" href="projectScreen.css">
   <script src="projectScreen.js"></script>
 </head>
@@ -28,119 +28,100 @@
       <div class="location">Ithaca, NY</div>
     </div>
   </div>
+  <div class="instructionsBox">Tap on each box to learn more</div>
   <div class="timelineContainer">
     <div class="leftContainer">
       <div class="amazon1" onclick="showOther('amazon1')">
         <div class="amazon1Front">
           <div class="amazon1Name">Amazon Future Engineer/Software Development Engineer Intern @ Amazon</div>
-          <div class="amazon1LocDate">Seattle, WA (May 2022-Aug. 2022)</div>
-          <div class="amazon1pic">pic</div>
-        </div>
-        <div class="amazon1Back">
-          <div class="amazon1pic2">pic</div>
-          <div class="amazon1desc">lorem</div>
+          <div class="amazon1pic"></div>
+          <div class="amazon1Desc">hello</div>
+          <div class="amazon1LocDate">Seattle, WA</div>
         </div>
       </div>
+      <div class="emptyBox">Jun. 2022 - Jan. 2023</div>
       <div class="LJL" onclick="showOther('LJL')">
         <div class="LJLFront">
           <div class="LJLName">Natural Language Processing Developer @ Linguistics Justice League</div>
-          <div class="LJLLocDate">Remote, May (2022-Aug. 2022)</div>
-          <div class="LJLpic">pic</div>
-        </div>
-        <div class="LJLBack">
-          <div class="LJLpic2">pic</div>
-          <div class="LJLdesc">lorem</div>
+          <div class="LJLpic"></div>
+          <div class="LJLDesc">hello</div>
+          <div class="LJLLocDate">Remote </div>
         </div>
       </div>
+      <div class="emptyBox">Aug. 2022 - Jan. 2023</div>
       <div class="edgi" onclick="showOther('edgi')">
         <div class="edgiFront">
-          <div class="edgiName">Software Development Engineer @ Environmental Data and Governance Initiative</div>
-          <div class="edgiDate">Ithaca, NY (Jan. 2023-Dec. 2023)</div>
-          <div class="edgipic">pic</div>
-        </div>
-        <div class="edgiBack">
-          <div class="edgipic2">pic</div>
-          <div class="edgidesc">lorem</div>
+          <div class="edgiName">Software Engineer @ Environmental Data and Governance Initiative</div>
+          <div class="edgipic"></div>
+          <div class="edgiDesc">hello</div>
+          <div class="edgiLocDate">Ithaca, NY </div>
         </div>
       </div>
-      <div class="embody" onclick="showOther('embody')">
-        <div class="embodyFront">
-          <div class="embodyName">Full-Stack Engineer @ Cornell College of Human Ecology</div>
-          <div class="embodyLocDate">Ithaca, NY (Aug. 2023-Present)</div>
-          <div class="embodypic">pic</div>
-        </div>
-        <div class="embodyBack">
-          <div class="embodypic2">pic</div>
-          <div class="embodydesc">lorem</div>
-        </div>
-      </div>
+      <div class="emptyBox">May 2023 - Aug. 2023</div>
       <div class="bus" onclick="showOther('bus')">
         <div class="busFront">
           <div class="busName">Campus Outreach Lead @ Cornell Hack4Impact</div>
-          <div class="busLocDate">Ithaca, NY (Jan. 2024-Present)</div>
-          <div class="buspic">pic</div>
-        </div>
-        <div class="busBack">
-          <div class="buspic2">pic</div>
-          <div class="busdesc">lorem</div>
+          <div class="buspic"></div>
+          <div class="busDesc">hello</div>
+          <div class="busLocDate">Ithaca, NY </div>
         </div>
       </div>
+      <div class="emptyBox">May 2024 - Present</div>
+      <div class="embody" onclick="showOther('embody')">
+        <div class="embodyFront">
+          <div class="embodyName">Full-Stack Engineer @ Cornell University College of Human Ecology</div>
+          <div class="embodypic"></div>
+          <div class="embodyDesc">hello</div>
+          <div class="embodyLocDate">Ithaca, NY </div>
+        </div>
+      </div>
+      <div class="emptyBox">May 2024 - Present</div>
     </div>
     <div class="timeline"></div>
     <div class="rightContainer">
+      <div class="topBox">May 2022 - Aug. 2022</div>
       <div class="wharton" onclick="showOther('wharton')">
         <div class="whartonFront">
           <div class="whartonName">Machine Learning Engineer @ Penn Computational Social Science Lab</div>
-          <div class="whartonDate">Remote (May 2022-Jan. 2023)</div>
-          <div class="whartonpic">pic</div>
-        </div>
-        <div class="whartonBack">
-          <div class="whartonpic2">pic</div>
-          <div class="whartondesc">lorem</div>
+          <div class="whartonpic"></div>
+          <div class="whartonDesc">hello</div>
+          <div class="whartonLocDate">Remote</div>
         </div>
       </div>
+      <div class="leftemptyBox">Jul. 2022 - Aug. 2022</div>
       <div class="XMP" onclick="showOther('XMP')">
         <div class="XMPFront">
           <div class="XMPName">Machine Learning Engineer @ Xenophobia Meter Project</div>
-          <div class="XMPDate">Ithaca, NY (Aug. 2022-Jan. 2023)</div>
-          <div class="xmppic">pic</div>
-        </div>
-        <div class="XMPback">
-          <div class="XMPpic2">pic</div>
-          <div class="XMPdesc">lorem</div>
+          <div class="XMPpic"></div>
+          <div class="XMPDesc">hello</div>
+          <div class="XMPLocDate">Ithaca, NY </div>
         </div>
       </div>
+      <div class="leftemptyBox">Dec. 2022 - Jan. 2024</div>
       <div class="amazon2" onclick="showOther('amazon2')">
         <div class="amazon2Front">
-          <div class="amazon2Name">Deep Learning Software Development Engineer @ Amazon</div>
-          <div class="amazon2Date">Seattle, WA (May 2022-Aug. 2022)</div>
-          <div class="amazon2pic">pic</div>
-        </div>
-        <div class="amazon2Back">
-          <div class="amazon2pic2">pic</div>
-          <div class="amazon2desc">lorem</div>
+          <div class="amazon2Name">Deep Learning Software Development Engineer @ Amazon Web Services</div>
+          <div class="amazon2pic"></div>
+          <div class="amazon2Desc">hello</div>
+          <div class="amazon2LocDate">Seattle, WA </div>
         </div>
       </div>
+      <div class=" leftemptyBox">Jan. 2024 - Present</div>
       <div class="pain" onclick="showOther('pain')">
         <div class="painFront">
           <div class="painName">Product Manager/Technical Lead @ Cornell Affect and Cognition Lab</div>
-          <div class="painLocDate">Ithaca, NY (May 2024-Present)</div>
-          <div class="painpic">pic</div>
-        </div>
-        <div class="painBack">
-          <div class="painpic2">pic</div>
-          <div class="paindesc">lorem</div>
+          <div class="painpic"></div>
+          <div class="painDesc">hello</div>
+          <div class="painLocDate">Ithaca, NY </div>
         </div>
       </div>
+      <div class=" leftemptyBox">May 2024 - Present</div>
       <div class="amazon3" onclick="showOther('amazon3')">
         <div class="amazon3Front">
-          <div class="amazon3Name">Deep Learning Software Development Engineer @ Amazon</div>
-          <div class="amazon3LocDate">Seattle, WA (May. 2024-Present)</div>
-          <div class="amazon3pic">pic</div>
-        </div>
-        <div class="amazon3Back">
-          <div class="amazon3pic2">pic</div>
-          <div class="amazon3desc">lorem</div>
+          <div class="amazon3Name">Deep Learning Software Development Engineer @ Amazon Web Services</div>
+          <div class="amazon3pic"></div>
+          <div class="amazon3Desc">hello</div>
+          <div class="amazon3LocDate">Seattle, WA </div>
         </div>
       </div>
     </div>
