--- a/contactScreen.html
+++ b/contactScreen.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eric Zhong's Resume</title>
+  <title>Eric Zhong's Contacts</title>
   <link rel="stylesheet" href="contactScreen.css">
 </head>
 
