added  email tabs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Health Advocate, Harry Potter Nerd, Brain Teaser Maniac, Beach
       Volleyball Player, Food Aficionado
     </div>
-    <a class="resumeButton" href="resumeScreen.html">Resume</a>
+    <a class="resumeButton" href="resumeScreen.html" onclick="openResume()">Resume</a>
     </button>
     <a class="projectButton" href="projectScreen.html">Projects</a>
     <a class="contactButton" href="contactScreen.html">Contact</a>
