--- a/contactScreen.html
+++ b/contactScreen.html
@@ -37,8 +37,12 @@
       <a href="https://www.linkedin.com/in/ericzhong1/" target="_blank">
         <img class="linkedin" src="./pictures/linkedin.png" alt="LinkedIn">
       </a>
+      <a href="https://github.com/ezhong0211" target="_blank">
+        <img class="github" src="./pictures/github.png" alt="Github">
+      </a>
     </div>
   </div>
+
 </body>
 
 </html>
