can now download resume from any tab

--- a/contactScreen.html
+++ b/contactScreen.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eric Zhong's Contacts</title>
   <link rel="stylesheet" href="contactScreen.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
       Volleyball Player, Food Aficionado
     </div>
     <a class="homeButton" href="index.html">Home</a>
-    <a class="resumeButton" href="resumeScreen.html">Resume</a>
+    <a class="resumeButton" href="resumeScreen.html" onclick="openResume()">Resume</a>
     <a class="projectButton" href="projectScreen.html">Projects</a>
   </div>
   <div class="container">
