--- a/projectScreen.html
+++ b/projectScreen.html
@@ -7,6 +7,7 @@
   <title>Eric Zhong's Projects</title>
   <link rel="stylesheet" href="projectScreen.css">
   <script src="projectScreen.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
       Volleyball Player, Food Aficionado
     </div>
     <a class="homeButton" href="index.html">Home</a>
-    <a class="resumeButton" href="resumeScreen.html">Resume</a>
+    <a class="resumeButton" href="resumeScreen.html" onclick="openResume()">Resume</a>
     <a class="contactButton" href="contactScreen.html">Contact</a>
   </div>
   <div class="container">
