--- a/resumeScreen.html
+++ b/resumeScreen.html
@@ -24,7 +24,7 @@
     <div class="postcard">
       <div class="greetingsText">Greetings From</div>
       <div class="homeDisplay">
-        <div class="resumeText">RESUMES</div>
+        <div class="resumeText">RESUME</div>
       </div>
       <div class="location">Seattle, WA</div>
     </div>
