--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 
-<body>
+<body onload="isMobile()">
   <div class="headerContainer">
     <div class="nameSignature">Eric Zhong</div>
     <div class="nameDescription">
