addded updated resume

--- a/projectScreen.html
+++ b/projectScreen.html
@@ -7,19 +7,15 @@
   <title>Eric Zhong's Projects</title>
   <link rel="stylesheet" href="projectScreen.css">
 </head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VG9S0H4EGX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-VG9S0H4EGX');
-  </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eric Zhong's Projects</title>
-    <link rel="stylesheet" href="projectScreen.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VG9S0H4EGX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VG9S0H4EGX');
+</script>
 
 <body>
   <script src="projectScreen.js"></script>
@@ -55,7 +51,7 @@
       <div class="emptyBox">Jun. 2022 - Jan. 2023</div>
       <div class="LJL" onclick="showOther('LJL')">
         <div class="LJLFront">
-          <div class="LJLName">Natural Language Processing Developer @ Linguistics Justice League</div>
+          <div class="LJLName">Software Development Engineer @ Linguistics Justice League</div>
           <div class="LJLpic"></div>
           <div class="LJLDesc">hello</div>
           <div class="LJLLocDate">Remote </div>
