--- a/projectScreen.html
+++ b/projectScreen.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eric Zhong's Projects</title>
+  <title>Eric Zhong's Website</title>
   <link rel="stylesheet" href="projectScreen.css">
 </head>
 <!-- Google tag (gtag.js) -->
