--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Greetings From Postcard</title>
+  <title>Eric Zhong's Website</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
   <!-- Google tag (gtag.js) -->
