changed projects to experiences

--- a/contactScreen.html
+++ b/contactScreen.html
@@ -27,7 +27,7 @@
     </div>
     <a class="homeButton" href="index.html">Home</a>
     <a class="resumeButton" href="resumeScreen.html" onclick="openResume()">Resume</a>
-    <a class="projectButton" href="projectScreen.html">Projects</a>
+    <a class="experienceButton" href="experienceScreen.html">Experience</a>
   </div>
   <div class="container">
     <div class="postcard">
