--- a/experienceScreen.html
+++ b/experienceScreen.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eric Zhong's Website</title>
-  <link rel="stylesheet" href="projectScreen.css">
+  <link rel="stylesheet" href="experiencescreen.css">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VG9S0H4EGX"></script>
@@ -18,7 +18,7 @@
 </script>
 
 <body>
-  <script src="projectScreen.js"></script>
+  <script src="experiencescreen.js"></script>
   <div class="headerContainer">
     <div class="nameSignature">Eric Zhong</div>
     <div class="nameDescription">
@@ -33,7 +33,7 @@
   <div class="container">
     <div class="postcard">
       <div class="greetingsText">Greetings From</div>
-      <div class="projectsText">PROJECTS</div>
+      <div class="experiencesText">EXPERIENCE</div>
       <div class="location">Ithaca, NY</div>
     </div>
   </div>
@@ -100,7 +100,7 @@
       <div class="leftemptyBox">Jul. 2022 - Aug. 2022</div>
       <div class="XMP" onclick="showOther('XMP')">
         <div class="XMPFront">
-          <div class="XMPName">Machine Learning Engineer @ Xenophobia Meter Project</div>
+          <div class="XMPName">Machine Learning Engineer @ Xenophobia Meter experience</div>
           <div class="XMPpic"></div>
           <div class="XMPDesc">hello</div>
           <div class="XMPLocDate">Ithaca, NY </div>
