--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       Volleyball Player, Food Aficionado
     </div>
     <a class="resumeButton" href="resumeScreen.html" onclick="openResume()">Resume</a>
-    <a class="projectButton" href="projectScreen.html">Projects</a>
+    <a class="experienceButton" href="experienceScreen.html">Experience</a>
     <a class="contactButton" href="contactScreen.html">Contact</a>
   </div>
   <div class="container">
@@ -38,7 +38,7 @@
       <div class="location">Miramar,FL</div>
     </div>
     <div class="resumePostcard"></div>
-    <div class="projectPostcard"></div>
+    <div class="experiencePostcard"></div>
     <div class="contactPostcard"></div>
   </div>
   <div class="aboutMeContainer">
