--- a/resumeScreen.html
+++ b/resumeScreen.html
@@ -25,7 +25,7 @@
       Volleyball Player, Food Aficionado
     </div>
     <a class="homeButton" href="index.html">Home</a>
-    <a class="projectButton" href="projectScreen.html">Projects</a>
+    <a class="experienceButton" href="experienceScreen.html">Experience</a>
     <a class="contactButton" href="contactScreen.html">Contact</a>
   </div>
   <div class="container">
