--- a/experienceScreen.html
+++ b/experienceScreen.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eric Zhong's Website</title>
-  <link rel="stylesheet" href="experiencescreen.css">
+  <link rel="stylesheet" href="experienceScreen.css">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VG9S0H4EGX"></script>
@@ -18,7 +18,7 @@
 </script>
 
 <body>
-  <script src="experiencescreen.js"></script>
+  <script src="experienceScreen.js"></script>
   <div class="headerContainer">
     <div class="nameSignature">Eric Zhong</div>
     <div class="nameDescription">
